# rag-datakit

./: .gitignore  README.md  pyproject.toml
nbs/: 00_distilabel-synthetic-data-generation.ipynb  02_train.ipynb  distilabel.ipynb
